Added the number's buttons

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
     background-color: #3b7861;
     box-sizing: border-box;
     padding: 10px;
+    
 }
 
 #display {
@@ -27,6 +28,8 @@ body {
     height: 70px;
     box-sizing: border-box;
     padding: 10px;
+    
+    max-width: 380px;
 
     font-size: 40px;
     font-weight: bold;
@@ -70,7 +73,7 @@ body {
     background-color: #217C7E;
 }
 
-#numberCero {
+#numberZero {
     display: flex;
     justify-content: center;
     align-items: center;
